Update UX functions like add cursor pointers, fix horizontal scroll with a media query for smaller screen .content padding, add required attribute to user profile and description inputs in HTML

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,6 +12,7 @@
   display: block;
   border-radius: 10px;
   transition: transform 0.3s ease-in;
+  cursor: pointer;
 }
 
 .card__content {
@@ -35,6 +36,7 @@
   background-color: transparent;
   opacity: 40%;
   cursor: pointer;
+  background-repeat: no-repeat;
 }
 
 .card__delete-btn {
@@ -48,6 +50,7 @@
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 50%;
   cursor: pointer;
+  background-repeat: no-repeat;
 }
 
 .card__delete-btn:hover {
