--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -49,6 +49,7 @@
   border: none;
   align-self: flex-start;
   transition: transform 0.3s ease-out;
+  cursor: pointer;
 }
 
 .profile__edit-btn:hover {
@@ -69,6 +70,7 @@
   border: solid;
   border-radius: 8px;
   align-self: flex-end;
+  cursor: pointer;
 }
 
 .profile__add-btn:hover {
